Add OpenAPI endpoint
